--- a/ga2/q15/package.json
+++ b/ga2/q15/package.json
@@ -1,5 +1,9 @@
 {
   "name": "ga2-q15-cloudflare-worker",
   "private": true,
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "scripts": {
+    "deploy": "wrangler deploy",
+    "dev": "wrangler dev"
+  }
 }
